barra inferior en posts se enconde al mostrar el footer

--- a/src/components/Blog/DisplayTOC.astro
+++ b/src/components/Blog/DisplayTOC.astro
@@ -1,4 +1,5 @@
 ---
+import Spinner from "../ui/Spinner.astro"
 import ListIcon from "../ui/icons/ListIcon.astro"
 import RightArrowIcon from "../ui/icons/RightArrowIcon.astro"
 import ShareIcon from "../ui/icons/ShareIcon.astro"
@@ -32,14 +33,17 @@ const { headings, postTitle } = Astro.props
   </div>
 </aside>
 
-<aside class="xl:hidden fixed bottom-6 w-full left-0 px-6 z-20">
+<aside
+  id="options-ctn"
+  class="xl:hidden fixed bottom-6 w-full left-0 px-6 z-20"
+>
   <div
-    class="max-w-screen-sm mx-auto bg-background border-2 border-borderColor-gray rounded-lg transition relative flex items-center px-2 py-1.5"
+    class="max-w-screen-sm mx-auto bg-background border-2 border-borderColor-gray rounded-lg transition relative flex items-center px-2 py-1.5 shadow-lg"
   >
     <!--Back-->
     <a
       href="/blog"
-      class="group w-9 h-9 hover:bg-button/80 rounded-lg flex items-center justify-center transition"
+      class="group w-9 h-9 hover:bg-button/80 hover:text-textColor-primary rounded-lg flex items-center justify-center transition"
     >
       <RightArrowIcon
         class="w-5 h-5 group-focus:translate-x-[-0.25rem] transition-transform rotate-180"
@@ -51,7 +55,8 @@ const { headings, postTitle } = Astro.props
       class="flex hover:bg-button/80 rounded-lg items-center gap-x-2 mx-auto hover:text-textColor-primary transition px-4 py-1.5"
       id="toc-btn"
     >
-      <ListIcon class="w-5 h-5" />
+      <ListIcon id="list-icon" class="hidden w-5 h-5" />
+      <Spinner id="spinner" class="w-5 h-5" />
       <span>Tabla de Contenidos</span>
     </button>
     <aside class="hidden absolute bottom-[48px] left-0 w-full px-2" id="toc">
@@ -72,7 +77,7 @@ const { headings, postTitle } = Astro.props
     </aside>
     <!--Share-->
     <button
-      class="w-9 h-9 hover:bg-button/80 rounded-lg flex items-center justify-center transition"
+      class="w-9 h-9 hover:bg-button/80 hover:text-textColor-primary rounded-lg flex items-center justify-center transition"
       id="share-btn"
     >
       <ShareIcon class="w-5 h-5" />
@@ -101,6 +106,37 @@ const { headings, postTitle } = Astro.props
     btnShare.addEventListener("click", () => {
       share.classList.toggle("hidden")
     })
+  })
+</script>
+
+<script>
+  import { $ } from "../../utils"
+
+  const optCnt = $("#options-ctn") as HTMLDivElement
+
+  const cb: IntersectionObserverCallback = (entries) => {
+    entries.forEach((entry) => {
+      if (entry.isIntersecting) {
+        optCnt.classList.add("hidden")
+      } else {
+        optCnt.classList.remove("hidden")
+      }
+    })
+  }
+
+  const options: IntersectionObserverInit = {
+    root: null,
+    rootMargin: "0px",
+    threshold: 0.1,
+  }
+
+  const observer = new IntersectionObserver(cb, options)
+
+  observer.observe($("footer") as HTMLDivElement)
+
+  window.addEventListener("load", () => {
+    $("#list-icon")?.classList.remove("hidden")
+    $("#spinner")?.classList.add("hidden")
   })
 </script>
 
