--- a/src/components/seo/OpenGraphTags.astro
+++ b/src/components/seo/OpenGraphTags.astro
@@ -26,11 +26,11 @@ const {
 } = Astro.props
 ---
 
-<!--OprenGraph Tags-->
+<!--OpenGraph Tags-->
 <meta property="og:title" content={title} />
 <meta property="og:type" content={type} />
 <meta property="og:url" content={url} />
-<meta property="og:locale" content="es" />
+<meta property="og:locale" content="es_ES" />
 <meta property="og:description" content={description} />
 <meta property="og:site_name" content={site_name} />
 <meta property="og:image" content={`${SITE.URL}${image}`} />
