--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -114,7 +114,7 @@ import songs from "../data/songs.json"
           aprendí otras cosas como
           <strong>Docker</strong> y Rust para tocar más ramas.
         </p>
-        <ul class="my-6 space-y-4 list-disc pl-8">
+        <ul class="my-6 space-y-4 list-disc list-inside pl-4">
           <li>
             <a
               class="prog"
@@ -134,11 +134,11 @@ import songs from "../data/songs.json"
             >.
           </li>
           <li>
-            🚧 <a
+            <a
               class="prog"
               href="https://github.com/michelangelo-valderrama/neoTodoList"
-              >[Neo Todo List]</a
-            > ~ Un todo list con Angular, Nestjs y MongoDB.
+              >[Full Stack Todo List]</a
+            > ~ Un TODO list con Angular, Nestjs, MongoDB y Docker.
           </li>
         </ul>
       </section>
@@ -178,27 +178,4 @@ import songs from "../data/songs.json"
   img {
     aspect-ratio: calc(attr(width) / attr(height));
   }
-
-  /* .gradient {
-    background-image: linear-gradient(
-      135deg,
-      hsl(269deg 97% 71%) 0%,
-      hsl(274deg 96% 70%) 15%,
-      hsl(280deg 93% 69%) 21%,
-      hsl(285deg 91% 67%) 26%,
-      hsl(290deg 88% 65%) 30%,
-      hsl(295deg 85% 63%) 34%,
-      hsl(300deg 82% 61%) 38%,
-      hsl(304deg 91% 60%) 42%,
-      hsl(308deg 100% 60%) 46%,
-      hsl(314deg 100% 61%) 50%,
-      hsl(320deg 100% 63%) 54%,
-      hsl(327deg 100% 65%) 58%,
-      hsl(334deg 100% 68%) 62%,
-      hsl(341deg 100% 70%) 67%,
-      hsl(348deg 100% 73%) 73%,
-      hsl(354deg 93% 74%) 81%,
-      hsl(0deg 80% 75%) 99%
-    );
-  } */
 </style>
