--- a/src/components/Blog/Metadata.astro
+++ b/src/components/Blog/Metadata.astro
@@ -14,7 +14,7 @@ const time = Math.round(body.split(" ").length / 150)
 const readingTime = time && `${time - 1}-${time + 1}`
 ---
 
-<div class="mb-1 md:mb-3 flex gap-3 items-center flex-wrap">
+<div class="mb-1 md:mb-3 flex gap-3 items-center flex-wrap text-textColor-primary">
   <p>
     <FormattedDate date={data.pubDate} />
      / {readingTime} minutos
@@ -31,7 +31,7 @@ const readingTime = time && `${time - 1}-${time + 1}`
 </div>
 <ul class="flex flex-wrap gap-2">
   {
-    data.tags.map((tag) => (
+    data.tags.map((tag: string) => (
       <li>
         <span class="text-sm px-2 py-1 rounded-lg bg-hrColor">{tag}</span>
       </li>
