--- a/src/components/Blog/DisplayTOC.astro
+++ b/src/components/Blog/DisplayTOC.astro
@@ -11,7 +11,7 @@ const { headings } = Astro.props
 
 <aside class="hidden xl:block fixed right-4 top-36">
   <div
-    class="border border-borderColor-gray py-4 px-6 bg-background box-content w-60 2xl:w-80 opacity-60 hover:opacity-100 transition-opacity max-h-[65vh] overflow-y-scroll"
+    class="border border-borderColor-gray py-4 px-6 bg-background box-content w-60 2xl:w-80 max-h-[65vh] overflow-y-scroll"
   >
     <h2 class="text-xl font-semibold mb-2">Tabla de Contenidos</h2>
     <TableOfContents
