--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -5,7 +5,7 @@ import GithubIcon from "../../components/ui/icons/GithubIcon.astro"
 import RssIcon from "../ui/icons/RssIcon.astro"
 ---
 
-<footer class="border-t border-borderColor-gray mb-2 md:mb-16 mt-36">
+<footer class="border-t border-borderColor-gray mb-2 mt-36">
   <div
     class="p-6 mt-4 md:px-0 max-w-screen-lorem mx-auto flex justify-between items-center text-textColor-secondary"
   >
